fix: panel header height on ios

--- a/styles/project/components/_forms.scss
+++ b/styles/project/components/_forms.scss
@@ -148,6 +148,8 @@ h5 {
   }
 
   &.mod-menu-down {
+    float: left;
+
     .dropdown-menu {
       top: -10px !important;
       left: -10px !important;
